--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<div class="inner">
 								<!-- Here is a heading where you can put your name -->
 								<h1>
-									First Last
+									Ezra Sukay
 								</h1>
 								<!-- 	Here is an image where you can put a picture of you. 
 									You can change the width and height attributes below to change how large
@@ -48,12 +48,12 @@
 
 									Try adding "border-radius: 50%;" to the style attribute.
 								-->
-								<img src="images/Astronomy.jpg" style="width:280px; height:280px; object-fit: cover;">
-								<!-- 	Here is a paragraph where you can put your position and institution, or
-									a short line about yourself.
+								<img src="images/2021Grad-136.jpg" style="width:280px; height:526px; object-fit: cover;">
+								<!-- 
 								-->
 								<p>
-									Position <br> Institution
+									SULI @ LNBL 2021-2022
+									B.S. Astrophysics UChicago 2021
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
@@ -211,7 +211,7 @@
 						<!-- 	You can change "Untitled" to your name to show everyone that
 							this is your work.
 						-->
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Ezra Sukay. Template by Astrosites (Steven Stetzler and Leah Fulmer). Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
