--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 
 									Try adding "border-radius: 50%;" to the style attribute.
 								-->
-								<img src="images/2021Grad-136.jpg" style="width:280px; height:526px; object-fit: cover;">
+								<img src="images/2021Grad-1362.jpg" style="width:280px; height:394px; object-fit: cover;">
 								<!-- 
 								-->
 								<p>
-									SULI @ LNBL 2021-2022
+									SULI @ LNBL 2021-2022 <br>
 									B.S. Astrophysics UChicago 2021
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
@@ -112,7 +112,7 @@
 								<b>Research Interests:</b>
 							</p>
 							<p>
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a>
+								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/search/q=%20author%3A%22Ezra%20Sukay%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">My Works in ADS</a>
 							</p>
 						</article>
 
@@ -154,9 +154,9 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p> 
-								<b>Email:</b> 
+								<b>Email: ezrasukay at gmail.com</b> 
 							</p>
-							<p> 
+							<!--p> 
 								<b>Address:</b> 
 							</p>
 
