--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	-->
 	<head>
 		<!-- This is the title of the page. It is the text that appears inside this pages tab in your web browser -->
-		<title>AstroSites</title>
+		<title>Ezra Sukay</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!-- 	This links to this page's CSS, which is contained in the folder assets/css and the file main.css.
@@ -52,8 +52,7 @@
 								<!-- 
 								-->
 								<p>
-									SULI @ LNBL 2021-2022 <br>
-									B.S. Astrophysics UChicago 2021
+									Science Undergraduate Labratory Intern <br> Lawrence Berkeley National Lab
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
@@ -106,13 +105,13 @@
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								<b>Education:</b>
+								<b>Education:</b> B.S. Astrophysics with Honors, The University of Chicago, June 2021
 							</p>
 							<p>
-								<b>Research Interests:</b>
+								<b>Research Interests:</b> Observational astronomy, extragalactic astrophysics, strong gravitational lensing, the interstellar medium, and more!
 							</p>
 							<p>
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/search/q=%20author%3A%22Ezra%20Sukay%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">My Works in ADS</a>
+								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/search/q=%20author%3A%22Ezra%20Sukay%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">NASA ADS</a>
 							</p>
 						</article>
 
