--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 						<!-- 	You can change "Untitled" to your name to show everyone that
 							this is your work.
 						-->
-						<p class="copyright">&copy; Ezra Sukay. Template by Astrosites (Steven Stetzler and Leah Fulmer). Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Ezra Sukay. Background photo by Erin Song. Template by Astrosites (Steven Stetzler and Leah Fulmer). Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
