--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							<h2 class="major">About Me</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
-								<img src="images/51176061_1034235566784152_8789289248550289408_n.jpg" alt=""/>
+								<img src="images/IMG-3145.jpg" alt="Partial eclipse at sunrise over Lake Michigan"/>
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
@@ -136,7 +136,7 @@
 						<article id="community">
 							<h2 class="major">Community</h2>
 							<span class="image main">
-								<img src="images/pic03.jpg" alt=""/>
+								<img src="images/51176061_1034235566784152_8789289248550289408_n.jpg" alt=""/>
 							</span>
 							<p>
 								<b>Teaching:</b>
@@ -164,30 +164,9 @@
 								here: https://fontawesome.com/icons
 							-->
 							<ul class="icons">
-								<!-- The Twitter icon -->
-								<li>
-									<!-- 	Note that you need to change the link to point to your page.
-										Replace "#" with your Twitter profile page.
-									-->
-									<a href="#" class="icon fa-twitter">
-										<span class="label">Twitter</span>
-									</a>
-								</li>
-								<!-- The Facebook icon -->
-								<li>
-									<a href="#" class="icon fa-facebook">
-										<span class="label">Facebook</span>
-									</a>
-								</li>
-								<!-- The Instagram icon -->
-								<li>
-									<a href="#" class="icon fa-instagram">
-										<span class="label">Instagram</span>
-									</a>
-								</li>
 								<!-- The GitHub icon -->
 								<li>
-									<a href="#" class="icon fa-github">
+									<a href="https://github.com/ezraorion" class="icon fa-github">
 										<span class="label">GitHub</span>
 									</a>
 								</li>
