--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
 						<!-- 	You can change "Untitled" to your name to show everyone that
 							this is your work.
 						-->
-						<p class="copyright">&copy; Ezra Sukay. Background photo by Erin Song. Template by Astrosites (Steven Stetzler and Leah Fulmer). Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Ezra Sukay. Main image by Alexandra Nisenoff. Background by Erin Song. 
+						<br> Template by Astrosites (Steven Stetzler and Leah Fulmer). Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
