--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							<h2 class="major">About Me</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
-								<img src="images/IMG-3145.jpg" alt="Partial eclipse at sunrise over Lake Michigan"/>
+								<img src="images/IMG-3145.jpg",  alt="Partial eclipse at sunrise over Lake Michigan", style="width:334px;height:280px;"/>
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
