--- a/index.html
+++ b/index.html
@@ -84,9 +84,6 @@
 								<!-- 	You can add another button to your navigation menu by adding
 									another List Item with a link inside of it.
 								-->
-								<!-- <li>
-									<a href="images/Astronomy.jpg">My CV</a>
-								</li> -->
 							</ul>
 						</nav>
 					</header>
@@ -100,8 +97,9 @@
 							<h2 class="major">About Me</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
-								<img src="images/IMG-3145.jpg",  alt="Partial eclipse at sunrise over Lake Michigan", style="width:334px;height:280px;"/>
+								<img src="images/IMG-3145(2).jpg",  alt="Partial eclipse at sunrise over Lake Michigan", style="width:334px;height:280px;"/>
 							</span>
+							<p> Partial eclipse at sunrise over Lake Michigan, Summer 2021. </p>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
