--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 							<h2 class="major">About Me</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
-								<img src="images/IMG-3145(2).jpg",  alt="Partial eclipse at sunrise over Lake Michigan", style="width:334px;height:280px;"/>
+								<img src="images/IMG-3145(2).jpg",  alt="Partial eclipse at sunrise over Lake Michigan""/>
 							</span>
 							<p> Partial eclipse at sunrise over Lake Michigan, Summer 2021. </p>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
