--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 								<b>Education:</b> B.S. Astrophysics with Honors, The University of Chicago, June 2021
 							</p>
 							<p>
-								<b>Research Interests:</b> Observational astronomy, extragalactic astrophysics, strong gravitational lensing, the interstellar medium, and more!
+								<b>Research Interests:</b> Observational astronomy, extragalactic astrophysics, strong gravitational lensing, the interstellar medium.
 							</p>
 							<p>
 								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/search/q=%20author%3A%22Ezra%20Sukay%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">NASA ADS</a>
@@ -123,6 +123,9 @@
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
+								<b>Sorry! This page is still under construction.</b>
+							</p>
+							<p>
 								<b>Project I Title</b><br>Project description, including further links to posters, talks, publications.
 							</p>
 							<p>
@@ -136,6 +139,9 @@
 							<span class="image main">
 								<img src="images/51176061_1034235566784152_8789289248550289408_n.jpg" alt=""/>
 							</span>
+							<p>
+								<b>Sorry! This page is still under construction.</b>
+							</p>
 							<p>
 								<b>Teaching:</b>
 							</p>
