--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
 						<article id="community">
 							<h2 class="major">Community</h2>
 							<span class="image main">
-								<img src="images/51176061_1034235566784152_8789289248550289408_n.jpg" alt=""/>
+								<img src="images/51176061_1034235566784152_8789289248550289408_n.jpg" alt=small portable telescope outside of Yerkes Observatory, a yellow stone building with a large metal dome, at dusk""/>
+																	    
+							<p> Dobsonian Telescope outside of Yerkes Observatory </p>
 							</span>
 							<p>
 								<b>Sorry! This page is still under construction.</b>
