--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 							<span class="image main">
 								<img src="images/51176061_1034235566784152_8789289248550289408_n.jpg" alt=small portable telescope outside of Yerkes Observatory, a yellow stone building with a large metal dome, at dusk""/>
 																	    
-							<p> Dobsonian Telescope outside of Yerkes Observatory </p>
+							<p> Dobsonian Telescope outside of Yerkes Observatory at a Star Party, Summer 2018. </p>
 							</span>
 							<p>
 								<b>Sorry! This page is still under construction.</b>
