--- a/index.html
+++ b/index.html
@@ -144,17 +144,25 @@
 							<p> Dobsonian Telescope outside of Yerkes Observatory at a Star Party, Summer 2018. </p>
 							</span>
 							<p>
-								<b>Sorry! This page is still under construction.</b>
+								<b>Teaching Assistant:</b> 
+								</p> The Physics of Stars, UChicago Pre-College Course, Summer 2020 <p>
+								</p> Observational Techniques in Astrophysics, UChicago Astrophysics Major Course, Spring 2020	<p>
 							</p>
 							<p>
-								<b>Teaching:</b>
-							</p>
-							<p>
-								<b>Outreach:</b>
+								<b>Learning Assistant:</b> 
+								</p> Waves, Optics, & Heat, Introductory Physics Course, Spring 2019 <p>
 							</p>
 							<p>
 								<b>Equity & Inclusion:</b>
+								</p> Out in STEM (oSTEM): As president, I launched a series of talks with LGBTQ+ professors and professionals, started biweekly board game nights, and secured $2,000 of funding for eight students to travel to the oSTEM 2019 conference. <p>
+								
 							</p>
+							<p>
+								<b>Outreach:</b>
+								</p> Ryerson Astronomical Society: As president, I worked with a board of peers to plan and run weekly talks, observation nights, and dark sky camping trips, as well as ensure our observatory was in working order.  <p>
+								</p> Yerkes Observatory: As an Intern in the Summer of 2018, I helped design, set up, and ran diffraction experiments for 20 high schoolers on the “Great Refractor.” I also ran stations at weekly star parties to introduce star gazing and astronomy to the public.  <p>
+							</p>
+
 						</article>
 
 						<!-- Here is a the "Contact" card. -->
