--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
 							</span>
 							<p>
 								<b>Teaching Assistant:</b> 
-								</p> The Physics of Stars, UChicago Pre-College Course, Summer 2020 <p>
-								</p> Observational Techniques in Astrophysics, UChicago Astrophysics Major Course, Spring 2020	<p>
+								The Physics of Stars, UChicago Pre-College Course, Summer 2020
+								Observational Techniques in Astrophysics, UChicago Astrophysics Major Course, Spring 2020
 							</p>
 							<p>
 								<b>Learning Assistant:</b> 
