--- a/index.html
+++ b/index.html
@@ -148,16 +148,12 @@
 								The Physics of Stars, UChicago Pre-College Course, Summer 2020<br>
 								Observational Techniques in Astrophysics, UChicago Astrophysics Major Course, Spring 2020<br>
 							<br>
-							<br>
 								<b>Learning Assistant:</b><br>
-								Waves, Optics, & Heat, Introductory Physics Course, Spring 2019<br>
-							<br>
+								Waves, Optics, & Heat, UChicago Introductory Physics Course, Spring 2019<br>
 							<br>
 								<b>Equity & Inclusion:</b><br>
 								Out in STEM (oSTEM): As president, I launched a series of talks with LGBTQ+ professors and professionals, started biweekly board game nights, and secured $2,000 of funding for eight students to travel to the oSTEM 2019 conference.<br>
-								
-							</p>
-							<p>
+							<br>
 								<b>Outreach:</b><br>
 								Ryerson Astronomical Society: As president, I worked with a board of peers to plan and run weekly talks, observation nights, and dark sky camping trips, as well as ensure our observatory was in working order.<br>
 								Yerkes Observatory: As an Intern in the Summer of 2018, I helped design, set up, and ran diffraction experiments for 20 high schoolers on the “Great Refractor.” I also ran stations at weekly star parties to introduce star gazing and astronomy to the public.<br>
