--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 								Waves, Optics, & Heat, UChicago Introductory Physics Course, Spring 2019<br>
 							<br>
 								<b>Equity & Inclusion:</b><br>
-								Out in STEM (oSTEM): As president, I launched a series of talks with LGBTQ+ professors and professionals, started biweekly board game nights, and secured $2,000 of funding for eight students to travel to the oSTEM 2019 conference.<br>
+								Out in STEM (oSTEM): As president of UChicago's chapter of oSTEM, I launched a series of talks with LGBTQ+ professors and professionals, started biweekly board game nights, and secured $2,000 of funding for eight students to travel to the oSTEM 2019 conference.<br>
 							<br>
 								<b>Outreach:</b><br>
 								Ryerson Astronomical Society: As president, I worked with a board of peers to plan and run weekly talks, observation nights, and dark sky camping trips, as well as ensure our observatory was in working order.<br>
