--- a/index.html
+++ b/index.html
@@ -144,20 +144,23 @@
 							<p> Dobsonian Telescope outside of Yerkes Observatory at a Star Party, Summer 2018. </p>
 							</span>
 							<p>
-								<b>Teaching Assistant:</b><br> 
-								The Physics of Stars, UChicago Pre-College Course, Summer 2020<br>
-								Observational Techniques in Astrophysics, UChicago Astrophysics Major Course, Spring 2020<br>
-							<br>
-								<b>Learning Assistant:</b><br>
-								Waves, Optics, & Heat, UChicago Introductory Physics Course, Spring 2019<br>
-							<br>
-								<b>Equity & Inclusion:</b><br>
-								Out in STEM (oSTEM): As president of UChicago's chapter of oSTEM, I launched a series of talks with LGBTQ+ professors and professionals, started biweekly board game nights, and secured $2,000 of funding for eight students to travel to the oSTEM 2019 conference.<br>
-							<br>
-								<b>Outreach:</b><br>
-								Ryerson Astronomical Society: As president, I worked with a board of peers to plan and run weekly talks, observation nights, and dark sky camping trips, as well as ensure our observatory was in working order.<br>
-								Yerkes Observatory: As an Intern in the Summer of 2018, I helped design, set up, and ran diffraction experiments for 20 high schoolers on the “Great Refractor.” I also ran stations at weekly star parties to introduce star gazing and astronomy to the public.<br>
+								This page is still under construction!(:
 							</p>
+							%<p>
+							%	<b>Teaching Assistant:</b><br> 
+							%	The Physics of Stars, UChicago Pre-College Course, Summer 2020<br>
+							%	Observational Techniques in Astrophysics, UChicago Astrophysics Major Course, Spring 2020<br>
+							%<br>
+							%	<b>Learning Assistant:</b><br>
+							%	Waves, Optics, & Heat, UChicago Introductory Physics Course, Spring 2019<br>
+							%<br>
+							%	<b>Equity & Inclusion:</b><br>
+							%	Out in STEM (oSTEM): As president of UChicago's chapter of oSTEM, I launched a series of talks with LGBTQ+ professors and professionals, started biweekly board game nights, and secured $2,000 of funding for eight students to travel to the oSTEM 2019 conference.<br>
+							%<br>
+							%	<b>Outreach:</b><br>
+							%	Ryerson Astronomical Society: As president, I worked with a board of peers to plan and run weekly talks, observation nights, and dark sky camping trips, as well as ensure our observatory was in working order.<br>
+							%	Yerkes Observatory: As an Intern in the Summer of 2018, I helped design, set up, and ran diffraction experiments for 20 high schoolers on the “Great Refractor.” I also ran stations at weekly star parties to introduce star gazing and astronomy to the public.<br>
+							%</p>
 
 						</article>
 
