--- a/index.html
+++ b/index.html
@@ -45,19 +45,18 @@
 								<!-- 	Here is an image where you can put a picture of you. 
 									You can change the width and height attributes below to change how large
 									your image is.
-
 									Try adding "border-radius: 50%;" to the style attribute.
 								-->
 								<img src="images/2021Grad-1362.jpg" style="width:280px; height:394px; object-fit: cover;">
 								<!-- 
 								-->
 								<p>
-									Science Undergraduate Labratory Intern <br> Lawrence Berkeley National Lab
+									Graduate Student <br> Department of Physics & Astronomy <br> Johns Hopkins University
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="images/sukayfall21CV.pdf" target="_blank">Curriculum Vitae</a>
+									<a href="images/sukay_fallCV22.pdf" target="_blank">Curriculum Vitae</a>
 								</p>
 							</div>
 						</div>
@@ -104,35 +103,40 @@
 							
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
-								<!-- Items contained in <b> tags are bolded! -->
+								<!-- 
 								<b>Education:</b> B.S. Astrophysics with Honors, The University of Chicago, June 2021
 							</p>
 							<p>
-								<b>Research Interests:</b> Observational astronomy, extragalactic astrophysics, strong gravitational lensing, the interstellar medium.
+								<b>Research Interests:</b> Observational astronomy, extragalactic astrophysics, strong gravitational lensing.
 							</p>
 							<p>
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/search/q=%20author%3A%22Ezra%20Sukay%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">NASA ADS</a>
+								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/search/q=%20author%3A%22Ezra%20Sukay%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">NASA ADS</a> -->
+							<p>
+								<b>About:</b> <br>
+								Hi, I'm Ezra! I'm studying Astrophysics at JHU in Baltimore, MD. I work with the <a href="https://www.susankassin.com/sliceanddice">Slice and Dice group</a>, lead by Dr. Susan Kassin. I'm using Keck/DEIMOS spectroscopy to determine why some galaxies have strong winds, while others do not. 
+
+								I'm also into ice skating and listening to podcasts! 
+								
 							</p>
 						</article>
 
 						<!-- Here is the "Research" card. -->
+						<!-- To do: add a cool pic of 1323 and also Lick -->
 						<article id="research">
 							<h2 class="major">Research</h2>
 							<span class="image main">
 								<img src="images/pic02.jpg" alt=""/>
 							</span>
 							<p>
-								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
-									the next line.
-								-->
-								<b>Sorry! This page is still under construction.</b>
+								I use observations to better understand how galaxies change over time. Here's some of the specific projects I have been involved with:
 							</p>
 							<p>
-								<b>Project I Title</b><br>Project description, including further links to posters, talks, publications.
+								I discovered strongly lensed galaxies by searching through public imaging surveys with <a href="https://coollamps.github.io/index.html">COOL-LAMPS</a> while at UChicago. One of those galaxies was <a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220311957S/abstract">C00L-J1323+0343</a>, a particularly bright lensed quiescent galaxy at z~1. We characterized its morphology to better understand early-type galaxy evolution and hope to further study CJ1323 with future space based observations! 
 							</p>
 							<p>
-								<b>Project II Title</b><br>Project description, including further links to posters, talks, publications.
+								I used KAST on the Shane Telescope at Lick Observatory to follow up on strongly lensing systems found with a neural network while working with Prof. Xiaosheng Huang and Prof. David Schlegel as a SULI intern at the Lawrence Berkeley National Lab. I also helped create lens models using <a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220207663G/abstract">GIGA-Lens</a>.
 							</p>
+
 						</article>
 
 						<!-- Here is the "Community" card. -->
@@ -144,23 +148,14 @@
 							<p> Dobsonian Telescope outside of Yerkes Observatory at a Star Party, Summer 2018. </p>
 							</span>
 							<p>
-								Sorry! This page is still under construction.
+								The innate wonder people feel when looking up at the night sky and seeing the amazing images astronomers capture with telescopes like JWST make astronomy a great gateway to science! I help out at observation nights at the Maryland Space Grant Observatory at JHU. I have organized and ran observation nights, dark sky camping trips, and talks for the public and students as President of UChicago's Astronomical Society. 
 							</p>
-							<!--. <p>
-								<b>Teaching Assistant:</b><br> 
-								The Physics of Stars, UChicago Pre-College Course, Summer 2020<br>
-								Observational Techniques in Astrophysics, UChicago Astrophysics Major Course, Spring 2020<br>
-							<br>
-								<b>Learning Assistant:</b><br>
-								Waves, Optics, & Heat, UChicago Introductory Physics Course, Spring 2019<br>
-							<br>
-								<b>Equity & Inclusion:</b><br>
-								Out in STEM (oSTEM): As president of UChicago's chapter of oSTEM, I launched a series of talks with LGBTQ+ professors and professionals, started biweekly board game nights, and secured $2,000 of funding for eight students to travel to the oSTEM 2019 conference.<br>
-							<br>
-								<b>Outreach:</b><br>
-								Ryerson Astronomical Society: As president, I worked with a board of peers to plan and run weekly talks, observation nights, and dark sky camping trips, as well as ensure our observatory was in working order.<br>
-								Yerkes Observatory: As an Intern in the Summer of 2018, I helped design, set up, and ran diffraction experiments for 20 high schoolers on the “Great Refractor.” I also ran stations at weekly star parties to introduce star gazing and astronomy to the public.<br>
-							</p> -->. 
+							<p>
+								I'm also interested in working to making STEM more accessible for those who have been traditionally excluded. At UChicago, as president of our chapter of Out in STEM, I launched new events to help queer students find successful role models & create relaxed environments where we could form community. 
+							</p>
+							<p>
+								If you want to read more about my outreach work, I go into more detail in my CV!
+							</p>
 
 						</article>
 
@@ -173,7 +168,6 @@
 							<!--p> 
 								<b>Address:</b> 
 							</p>
-
 							<!-- 	Here are the fancy icons that link to your social media.
 								These icons are rendered using Font Awesome fonts, and you can find more icons
 								here: https://fontawesome.com/icons
@@ -187,7 +181,6 @@
 								</li>
 								<!-- 	We can add a new icon by searching on the Font Awesome website
 									for the correct class name and inserting it as a new list item.
-
 									We found "envelope" here: https://fontawesome.com/icons/envelope
 								-->
 								<!-- <li>
