--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 									your image is.
 									Try adding "border-radius: 50%;" to the style attribute.
 								-->
-								<img src="images/2021Grad-1362.jpg" style="width:280px; height:394px; object-fit: cover;">
+								<img src="images/IMG_5564.png" style="width:280px; height:394px; object-fit: cover;">
 								<!-- 
 								-->
 								<p>
@@ -55,8 +55,9 @@
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
-									<!-- Note you will want to change where this points to! -->
-									<a href="images/sukay_fallCV22.pdf" target="_blank">Curriculum Vitae</a>
+									<!-- Note you will want to change where this points to! -->							
+									<a href="images/sukay_fallcv22.pdf" target="_blank">Curriculum Vitae</a>
+									<br>
 								</p>
 							</div>
 						</div>
@@ -195,9 +196,9 @@
 					<!-- This is the footer that appears at the bottom of the page -->
 					<footer id="footer">
 						<!-- 	You can change "Untitled" to your name to show everyone that
-							this is your work.
+							this is your work. Main image by Alexandra Nisenoff. 
 						-->
-						<p class="copyright">&copy; Ezra Sukay. Main image by Alexandra Nisenoff. Background by Erin Song. 
+						<p class="copyright">&copy; Ezra Sukay. Background by Erin Song. 
 						<br> Template by Astrosites (Steven Stetzler and Leah Fulmer). Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
