--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 								<!-- 
 								-->
 								<p>
-									Graduate Student <br> Department of Physics & Astronomy <br> Johns Hopkins University
+									Graduate Student <br> 
+									Department of Physics & Astronomy <br> 
+									Johns Hopkins University
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
@@ -98,7 +100,7 @@
 							<h2 class="major">About Me</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
-								<img src="images/IMG-3145(2).jpg",  alt="Partial eclipse at sunrise over Lake Michigan""/>
+								<img src="images/IMG-3145(2).jpg",  alt="Partial eclipse at sunrise over Lake Michigan"/>
 					
 							<p> Partial eclipse at sunrise over Lake Michigan, Summer 2021. </p>
 							</span>
@@ -127,7 +129,7 @@
 						<article id="research">
 							<h2 class="major">Research</h2>
 							<span class="image main">
-								<img src="images/pic02.jpg" alt=""/>
+								<img src="images/cj1323main_numbered.png" alt=""/>
 							</span>
 							<p>
 								I use observations to better understand how galaxies change over time. Here's some of the specific projects I have been involved with:
@@ -154,9 +156,6 @@
 							</p>
 							<p>
 								I'm also interested in working to making STEM more accessible for those who have been traditionally excluded. At UChicago, as president of our chapter of Out in STEM, I launched new events to help queer students find successful role models & create relaxed environments where we could form community. 
-							</p>
-							<p>
-								If you want to read more about my outreach work, I go into more detail in my CV!
 							</p>
 
 						</article>
