--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
 						<article id="research">
 							<h2 class="major">Research</h2>
 							<span class="image main">
-								<img src="images/cj1323main_numbered.png" alt=""/>
+								<img src="images/cj1323main_numbered.png" alt="Astronomical image. There is an arc of three red bright knots in a half-ring at the center of the image. Inside the arc are two similarly bright yellow-orange galaxies. Between them is a very bright star."/>
+								<p> gr(z + H) image of COOL J1323+0343. This image was constructed using grz-band imaging from DECaLS and H-band imaging from FOURSTAR on Magellan. The lensed galaxy is seen as a bright red multiply-imaged source, with three images.  The foreground cluster has two similarly bright central galaxies. The bright blue source between the two brightest cluster galaxies is a foreground star. </p>
 							</span>
 							<p>
 								I use observations to better understand how galaxies change over time. Here's some of the specific projects I have been involved with:
