--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 								<p>
 									<!-- Note you will want to change where this points to! -->							
 									<a href="images/sukay_fallcv22.pdf" target="_blank">Curriculum Vitae</a>
+									<br>
 								</p>
 								<p>
 								</p>
@@ -118,7 +119,8 @@
 							<p>
 								<b>About:</b> <br>
 								Hi, I'm Ezra! I'm studying Astrophysics at JHU in Baltimore, MD. I work with the <a href="https://www.susankassin.com/sliceanddice">Slice and Dice group</a>, lead by Dr. Susan Kassin. I'm using Keck/DEIMOS spectroscopy to determine why some galaxies have strong winds, while others do not. 
-
+							</p>
+							<p>
 								I'm also into ice skating and listening to podcasts! 
 								
 							</p>
@@ -133,10 +135,10 @@
 								<p> gr(z + H) image of COOL J1323+0343. This image was constructed using grz-band imaging from DECaLS and H-band imaging from FOURSTAR on Magellan. The lensed galaxy is seen as a bright red multiply-imaged source, with three images.  The foreground cluster has two similarly bright central galaxies. The bright blue source between the two brightest cluster galaxies is a foreground star. </p>
 							</span>
 							<p>
-								I use observations to better understand how galaxies change over time. Here's some of the specific projects I have been involved with:
+								I use observations to better understand how galaxies evolve. Here's some of the specific projects I have been involved with:
 							</p>
 							<p>
-								I discovered strongly lensed galaxies by searching through public imaging surveys with <a href="https://coollamps.github.io/index.html">COOL-LAMPS</a> while at UChicago. One of those galaxies was <a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220311957S/abstract">C00L-J1323+0343</a>, a particularly bright lensed quiescent galaxy at z~1. We characterized its morphology to better understand early-type galaxy evolution and hope to further study CJ1323 with future space based observations! 
+								I discovered strongly lensed galaxies by searching through public imaging surveys with <a href="https://coollamps.github.io/index.html">COOL-LAMPS</a> while at UChicago. One of those galaxies was <a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220311957S/abstract">C00L-J1323+0343</a>, a particularly bright lensed quiescent galaxy at z~1. We characterized its morphology and star formation history to better understand early-type galaxy evolution and hope to further study CJ1323 with future space based observations! 
 							</p>
 							<p>
 								I used KAST on the Shane Telescope at Lick Observatory to follow up on strongly lensing systems found with a neural network while working with Prof. Xiaosheng Huang and Prof. David Schlegel as a SULI intern at the Lawrence Berkeley National Lab. I also helped create lens models using <a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220207663G/abstract">GIGA-Lens</a>.
