--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/search/q=%20author%3A%22Ezra%20Sukay%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">NASA ADS</a> -->
 							<p>
 								<b>About:</b> <br>
-								Hi, I'm Ezra! I'm studying Astrophysics at JHU in Baltimore, MD. I work with the <a href="https://www.susankassin.com/sliceanddice">Slice and Dice group</a>, lead by Dr. Susan Kassin. I'm using Keck/DEIMOS spectroscopy to determine why some galaxies have strong winds, while others do not. 
+								Hi, I'm Ezra! I'm studying Astrophysics at JHU in Baltimore, MD. I work with the <a href="https://www.galaxysliceanddice.org/">Slice and Dice group</a>, lead by Dr. Susan Kassin. I'm using Keck/DEIMOS spectroscopy to determine why some galaxies have strong winds, while others do not. 
 							</p>
 							<p>
 								I'm also into ice skating and listening to podcasts! 
