--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->							
-									<a href="images/sukay_springcv23.pdf" target="_blank">Curriculum Vitae</a>
+									<a href="images/sukay_spring25_cv.pdf" target="_blank">Curriculum Vitae</a>
 
 								</p>
 							</div>
@@ -116,10 +116,10 @@
 								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/search/q=%20author%3A%22Ezra%20Sukay%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">NASA ADS</a> -->
 							<p>
 								<b>About:</b> <br>
-								Hi, I'm Ezra! I'm studying Astrophysics at JHU in Baltimore, MD. I work with the <a href="https://www.galaxysliceanddice.org/">Slice and Dice group</a>, lead by Dr. Susan Kassin. I'm using Keck/DEIMOS spectroscopy to determine why some galaxies have strong winds, while others do not. 
+								Hi, I'm Ezra! I'm studying Astrophysics at JHU in Baltimore, MD. I work with the <a href="https://www.galaxysliceanddice.org/">Slice and Dice group</a>, lead by Dr. Susan Kassin. I'm using JWST spectroscopy to study outflows and metals in galaxies. 
 							</p>
 							<p>
-								I'm also into ice skating and listening to podcasts! 
+								I spend my free time ice skating and playing board games! 
 								
 							</p>
 						</article>
@@ -153,7 +153,7 @@
 							<p> Dobsonian Telescope outside of Yerkes Observatory at a Star Party, Summer 2018. </p>
 							</span>
 							<p>
-								The innate wonder people feel when looking up at the night sky and seeing the amazing images astronomers capture with telescopes like JWST make astronomy a great gateway to science! I help out at observation nights at the Maryland Space Grant Observatory at JHU. I have organized and ran observation nights, dark sky camping trips, and talks for the public and students as President of UChicago's Astronomical Society. 
+								The innate wonder people feel when looking up at the night sky and seeing the amazing images astronomers capture with telescopes like JWST make astronomy a great gateway to science! I ran the public observation nights at the Maryland Space Grant Observatory at JHU. I have organized and ran observation nights, dark sky camping trips, and talks for the public and students as President of UChicago's Astronomical Society. 
 							</p>
 							<p>
 								I'm also interested in working to making STEM more accessible for those who have been traditionally excluded. At UChicago, as president of our chapter of Out in STEM, I launched new events to help queer students find successful role models & create relaxed environments where we could form community. 
